hadoop role support spark setup

--- a/hosts.yml
+++ b/hosts.yml
@@ -9,7 +9,7 @@ all:
         vb0:
           ansible_port: 22
           ansible_host: vb0.dev.yufei.com
-          ip: 192.168.3.21
+          ip: 192.168.18.21
           netplan_cfg: /etc/netplan/00-installer-config.yaml
           as_hostname: vb0.dev.yufei.com
           as_gpu: false
@@ -21,10 +21,10 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-          app_rootDir: /data/apps/
-          app_dataRootDir: /data/app_data/
-          app_logRootDir: /data/app_logs/
-          app_confRootDir: /data/app_conf/
+#          app_rootDir: /data/apps/
+#          app_dataRootDir: /data/app_data/
+#          app_logRootDir: /data/app_logs/
+#          app_confRootDir: /data/app_conf/
 
           #kafka
           kafka_brokerId: 0
@@ -72,7 +72,7 @@ all:
           ansible_port: 22
           ansible_host: vb1.dev.yufei.com
           as_hostname: vb1.dev.yufei.com
-          ip: 192.168.3.22
+          ip: 192.168.18.22
           netplan_cfg: /etc/netplan/00-installer-config.yaml
           as_gpu: false
           as_docker_allowed_rw_mounts: /data/yarn/data,/data/yarn/logs
@@ -82,10 +82,10 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-          app_rootDir: /data/apps/
-          app_dataRootDir: /data/app_data/
-          app_logRootDir: /data/app_logs/
-          app_confRootDir: /data/app_conf/
+#          app_rootDir: /data/apps/
+#          app_dataRootDir: /data/app_data/
+#          app_logRootDir: /data/app_logs/
+#          app_confRootDir: /data/app_conf/
 
           #kafka
           kafka_brokerId: 1
@@ -93,16 +93,17 @@ all:
           es_config:
             node.roles:
               - master
+              - data
             vm.max_map_count: 262144
 
             cluster.name: es_vb
             discovery.seed_hosts:
-              - vb0.dev.yufei.com
+#              - vb0.dev.yufei.com
               - vb1.dev.yufei.com
 #              - vb2.dev.yufei.com
 
             cluster.initial_master_nodes:
-              - vb0.dev.yufei.com
+#              - vb0.dev.yufei.com
               - vb1.dev.yufei.com
 #              - vb2.dev.yufei.com
             ES_JAVA_OPTS:
@@ -110,7 +111,7 @@ all:
           ansible_port: 22
           ansible_host: vb2.dev.yufei.com
           as_hostname: vb2.dev.yufei.com
-          ip: 192.168.3.23
+          ip: 192.168.18.23
           netplan_cfg: /etc/netplan/00-installer-config.yaml
           as_gpu: false
           as_docker_allowed_rw_mounts: /data/yarn/data,/data/yarn/logs
@@ -120,10 +121,10 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-          app_rootDir: /data/apps/
-          app_dataRootDir: /data/app_data/
-          app_logRootDir: /data/app_logs/
-          app_confRootDir: /data/app_conf/
+#          app_rootDir: /data/apps/
+#          app_dataRootDir: /data/app_data/
+#          app_logRootDir: /data/app_logs/
+#          app_confRootDir: /data/app_conf/
 
           #kafka
           kafka_brokerId: 2
@@ -163,6 +164,7 @@ all:
         primary.dev:
           ansible_port: 22
           ansible_host: 172.16.104.220
+          ip: 172.16.104.220
           as_hostname: primary.dev.vcg.com
           as_gpu: false
           as_hdfs_name_dir: file:///data/hadoop/hdfs/namenode
@@ -173,6 +175,34 @@ all:
           as_cpu_vcores: 200
           as_hdfs_data_dir: file:///data_hadoop_2/hadoop/hdfs/datanode/,file:///data5/hadoop/hdfs/datanode/
           as_redis_dbdir: /data5/redis/data/
+          as_spark_log_dir: /data5/spark/logs/
+          as_spark_worker_dir: /data5/spark/works/
+          as_spark_local_dirs: /data5/spark/data/
+          as_spark_master_host: primary.dev.vcg.com
+
+
+          app_rootDir: /data_hadoop_2/apps/
+          app_dataRootDir: /data_hadoop_2/app_data/
+          app_logRootDir: /data_hadoop_2/app_logs/
+          app_confRootDir: /data_hadoop_2/app_conf/
+          #es
+          es_config:
+            node.roles:
+              - master
+              - data
+            vm.max_map_count: 262144
+
+            cluster.name: es_vcg
+            discovery.seed_hosts:
+              - primary.dev.vcg.com
+
+            cluster.initial_master_nodes:
+              - primary.dev.vcg.com
+            ES_JAVA_OPTS: -Xms10g -Xmx10g
+
+
+
+
 #            as_cpu-vcores: 16
 #            as_memory-mb: 60960
 
@@ -187,6 +217,7 @@ all:
         gpu0.dev:
           ansible_port: 22
           ansible_host: 172.16.108.176
+          ip: 172.16.108.176
           as_hostname: gpu0.dev.vcg.com
           as_gpu: true
           as_local_dirs: /data3/yarn/data
@@ -194,7 +225,30 @@ all:
           as_cpu_vcores: 200
           as_memory_mb: 100960
           as_hdfs_data_dir: file:///data3/hadoop/hdfs/datanode/
+          as_spark_log_dir: /data3/spark/logs/
+          as_spark_worker_dir: /data3/spark/works/
+          as_spark_local_dirs: /data3/spark/data/
+          as_spark_master_host: primary.dev.vcg.com
           as_docker_allowed_rw_mounts: /data3/yarn/data,/data3/yarn/logs
+
+          app_rootDir: /data3/apps/
+          app_dataRootDir: /data3/app_data/
+          app_logRootDir: /data3/app_logs/
+          app_confRootDir: /data3/app_conf/
+          #es
+          es_config:
+            node.roles:
+              - master
+              - data
+            vm.max_map_count: 262144
+
+            cluster.name: es_vcg
+            discovery.seed_hosts:
+              - gpu0.dev.vcg.com
+
+            cluster.initial_master_nodes:
+              - gpu0.dev.vcg.com
+            ES_JAVA_OPTS: -Xms5g -Xmx5g
 
 
 
@@ -213,7 +267,7 @@ all:
 
     kafka_brokers:
       hosts:
-        primary.dev:
+        kafka.dev:
           ansible_port: 22
           ansible_host: 172.16.104.220
           as_hostname: primary.dev.vcg.com
