--- a/roles/hadoop/tasks/main.yml
+++ b/roles/hadoop/tasks/main.yml
@@ -59,6 +59,63 @@
      path: "{{hadoop_home}}"
      state: absent
 
+
+
+#spark
+- name: spark change foler permission
+  become: yes
+  become_user: root
+  tags:
+    - spark_setup
+  file:
+    path: "{{spark_home}}"
+    owner: zhaoyufei
+    group: hadoop
+    mode: u=rwx,g=xr,o=x
+    recurse: yes
+    state: directory
+
+- name: upload spark to remote machine
+  unarchive:
+    src: "{{spark_libary_path}}"
+    dest: "{{remote_hadoop_dir}}"
+    owner: zhaoyufei
+    group: hadoop
+    mode: u=rwx,g=xr,o=x
+  tags:
+    - spark_setup
+  become: yes
+  become_user: root
+
+- name: make sure all related folders present, if present do nothing
+  become: yes
+  become_user: root
+  tags: spark_setup
+  file:
+    path: "{{item}}"
+    owner: zhaoyufei
+    group: hadoop
+    mode: u=rwx,g=xr,o=x
+    recurse: yes
+    state: directory
+  loop:
+    - "{{as_spark_log_dir}}/"
+    - "{{as_spark_worker_dir}}/"
+    - "{{as_spark_local_dirs}}/"
+- name: hadoop env setup
+  template:
+    dest: "{{spark_home}}conf/spark-env.sh"
+    src: templates/spark-env.sh.j2
+    mode: u=rw,g=r,o=r
+    owner: root
+    group: hadoop
+  become: yes
+  become_user: root
+  tags:
+    - spark_setup
+    - spark_config
+
+
 # hp_install: install hadoop and other all things that ready for to config and run  hadoop yarn cluster
 # hp_config:  after hp_install ,  config hadoop yarn related parameters and be ready to running
 # hp_setup: hp_install,hp_config,cgroup_init
@@ -95,6 +152,7 @@
   tags:
     - hp_install
     - hp_setup
+    - hp_ce
   shell: chmod 6050 {{hadoop_home}}bin/container-executor
 
 
@@ -104,6 +162,7 @@
   tags:
     - hp_install
     - hp_setup
+    - hp_logs
   file:
     path: "{{hadoop_home}}logs"
     owner: root
@@ -222,6 +281,20 @@
     mode: u=rw,g=r,o=r
   become: yes
   become_user: root
+  tags:
+    - hp_config
+    - hp_setup
+- name: hadoop env setup
+  template:
+    src: templates/bash.bashrc.j2
+    dest: /etc/bashrc
+    owner: root
+    group: root
+    mode: u=rw,g=r,o=r
+  become: yes
+  become_user: root
+  #Debian or RedHat
+  when: ansible_os_family == 'RedHat'
   tags:
     - hp_config
     - hp_setup
