--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,70 @@
 all:
   hosts:
   children:
+    home_master:
+      hosts:
+        gpu0:
+          ansible_port: 22
+          ansible_host: 192.168.18.18
+          ip: 192.168.18.18
+          as_hostname: gpu0.dev.yufei.com
+          domains:
+            - ip: 192.168.18.22
+              domain: vb1.dev.yufei.com
+            - ip: 192.168.18.23
+              domain: vb2.dev.yufei.com
+            - ip: 192.168.18.21
+              domain: vb0.dev.yufei.com
+            - ip: 192.168.18.18
+              domain: gpu0.dev.yufei.com
+
+          netplan_cfg: /etc/netplan/00-installer-config.yaml
+          interfaceName: enp4s0
+          as_gpu: true
+
+          as_docker_allowed_rw_mounts: /data5/yarn/data,/data5/yarn/logs
+
+
+          as_redis_dbdir: /data1/redis/data/
+
+          as_hdfs_name_dir: file:///data1/hadoop/hdfs/namenode
+          as_hdfs_data_dir: file:///data1/hadoop/hdfs/datanode/
+          as_spark_log_dir: /data1/spark/logs/
+          as_spark_worker_dir: /data1/spark/works/
+          as_spark_local_dirs: /data1/spark/data/
+          as_spark_master_host: gpu0.dev.yufei.com
+          as_local_dirs: /data1/yarn/data
+          as_log_dirs: /data1/yarn/logs
+          as_memory_mb: 80960
+          as_cpu_vcores: 200
+
+
+          app_rootDir: /data1/apps/
+          app_dataRootDir: /data1/app_data/
+          app_logRootDir: /data1/app_logs/
+          app_confRootDir: /data1/app_conf/
+          #es
+#          es_config:
+#            node.roles:
+#              - master
+#              - data
+#            vm.max_map_count: 262144
+#
+#            cluster.name: es_vcg
+#            discovery.seed_hosts:
+#              - primary.dev.vcg.com
+#
+#            cluster.initial_master_nodes:
+#              - primary.dev.vcg.com
+#            ES_JAVA_OPTS: -Xms10g -Xmx10g
+
+
+
+      vars:
+        as_hadoop_master: true
+        as_hadoop_slave: true
+        as_resourcemanager_address: gpu0.dev.yufei.com
+        as_namenode_address: gpu0.dev.yufei.com
 
 
 
@@ -35,15 +99,15 @@ all:
               - master
             vm.max_map_count: 262144
 
-            cluster.name: es_vb
-            discovery.seed_hosts:
-              - vb0.dev.yufei.com
-              - vb1.dev.yufei.com
-#              - vb2.dev.yufei.com
-
-            cluster.initial_master_nodes:
-              - vb0.dev.yufei.com
-              - vb1.dev.yufei.com
+#            cluster.name: es_vb
+#            discovery.seed_hosts:
+#              - vb0.dev.yufei.com
+#              - vb1.dev.yufei.com
+##              - vb2.dev.yufei.com
+#
+#            cluster.initial_master_nodes:
+#              - vb0.dev.yufei.com
+#              - vb1.dev.yufei.com
 #              - vb2.dev.yufei.com
             ES_JAVA_OPTS:
 
@@ -82,10 +146,10 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-#          app_rootDir: /data/apps/
-#          app_dataRootDir: /data/app_data/
-#          app_logRootDir: /data/app_logs/
-#          app_confRootDir: /data/app_conf/
+          app_rootDir: /data/apps/
+          app_dataRootDir: /data/app_data/
+          app_logRootDir: /data/app_logs/
+          app_confRootDir: /data/app_conf/
 
           #kafka
           kafka_brokerId: 1
@@ -132,14 +196,14 @@ all:
           es_config:
             vm.max_map_count: 262144
 
-            cluster.name: es_vb
-            node.roles:
-              - master
-              - data
-            discovery.seed_hosts:
-              - vb0.dev.yufei.com
-              - vb1.dev.yufei.com
-              - vb2.dev.yufei.com
+#            cluster.name: es_vb
+#            node.roles:
+#              - master
+#              - data
+#            discovery.seed_hosts:
+#              - vb0.dev.yufei.com
+#              - vb1.dev.yufei.com
+#              - vb2.dev.yufei.com
 
 #            cluster.initial_master_nodes:
 #              - vb0.dev.yufei.com
