--- a/roles/comm/templates/netcfg.yml
+++ b/roles/comm/templates/netcfg.yml
@@ -1,7 +1,7 @@
 # This is the network config written by 'subiquity'
 network:
   ethernets:
-    enp0s3:
+    {{interfaceName}}:
       dhcp4: false
       addresses:
         - {{ip}}/24
