--- a/roles/zk/tasks/main.yml
+++ b/roles/zk/tasks/main.yml
@@ -33,7 +33,7 @@
   become_user: root
   tags: zk_install
   unarchive:
-    src: "{{zk_libary_dir}}"
+    src: "{{app_libary_path}}"
     dest: "{{app_rootDir}}{{appName}}/"
     extra_opts: [--strip-components=1]
 #    creates: "{{app_rootDir}}{{appName}}/"
