--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,58 @@
 all:
   hosts:
   children:
+    wsl:
+      hosts:
+        local:
+          ansible_port: 22
+          ansible_host: 192.168.56.1
+          ip: 192.168.56.1
+          as_hostname: local
+          domains:
+            - ip: 192.168.18.22
+              domain: vb1.dev.yufei.com
+            - ip: 192.168.18.23
+              domain: vb2.dev.yufei.com
+            - ip: 192.168.18.21
+              domain: vb0.dev.yufei.com
+            - ip: 192.168.18.18
+              domain: gpu0.dev.yufei.com
+
+          netplan_cfg: /etc/netplan/00-installer-config.yaml
+          interfaceName: enp4s0
+          as_gpu: true
+
+          as_docker_allowed_rw_mounts: /data5/yarn/data,/data5/yarn/logs
+
+
+          as_redis_dbdir: /data1/redis/data/
+
+          as_hdfs_name_dir: file:///data1/hadoop/hdfs/namenode
+          as_hdfs_data_dir: file:///data1/hadoop/hdfs/datanode/
+          as_spark_log_dir: /mnt/e/data/spark/logs/
+          as_spark_worker_dir: /mnt/e/data/spark/works/
+          as_spark_local_dirs: /mnt/e/data/spark/data/
+          as_spark_master_host: gpu0.dev.yufei.com
+          as_local_dirs: /mnt/e/data/yarn/data
+          as_log_dirs: /mnt/e/data/yarn/logs
+          as_memory_mb: 80960
+          as_cpu_vcores: 200
+
+
+          app_rootDir: /mnt/e/data/apps/
+          app_dataRootDir: /data1/app_data/
+          app_logRootDir: /data1/app_logs/
+          app_confRootDir: /data1/app_conf/
+
+
+
+
+        vars:
+          as_hadoop_master: true
+          as_hadoop_slave: true
+          as_resourcemanager_address: lcoal.dev.yufei.com
+          as_namenode_address: lcoal.dev.yufei.com
+
     home_master:
       hosts:
         gpu0:
@@ -43,20 +95,21 @@ all:
           app_dataRootDir: /data1/app_data/
           app_logRootDir: /data1/app_logs/
           app_confRootDir: /data1/app_conf/
-          #es
-#          es_config:
-#            node.roles:
-#              - master
-#              - data
-#            vm.max_map_count: 262144
-#
-#            cluster.name: es_vcg
-#            discovery.seed_hosts:
-#              - primary.dev.vcg.com
-#
-#            cluster.initial_master_nodes:
-#              - primary.dev.vcg.com
-#            ES_JAVA_OPTS: -Xms10g -Xmx10g
+          es_config:
+            node.roles:
+              - master
+              - data
+            vm.max_map_count: 262144
+
+            cluster.name: es
+            discovery.seed_hosts:
+              - gpu0.dev.yufei.com
+
+            cluster.initial_master_nodes:
+              - gpu0.dev.yufei.com
+            ES_JAVA_OPTS:
+          mongo_config:
+            wiredTiger.engineConfig.cacheSizeGB: 10
 
 
 
@@ -229,7 +282,7 @@ all:
           ansible_port: 22
           ansible_host: 172.16.104.220
           ip: 172.16.104.220
-          as_hostname: primary.dev.vcg.com
+          as_hostname: gpu0.dev.yufei.com
           as_gpu: false
           as_hdfs_name_dir: file:///data/hadoop/hdfs/namenode
           as_docker_allowed_rw_mounts: /data5/yarn/data,/data5/yarn/logs
@@ -242,7 +295,7 @@ all:
           as_spark_log_dir: /data5/spark/logs/
           as_spark_worker_dir: /data5/spark/works/
           as_spark_local_dirs: /data5/spark/data/
-          as_spark_master_host: primary.dev.vcg.com
+          as_spark_master_host: gpu0.dev.yufei.com
 
 
           app_rootDir: /data_hadoop_2/apps/
@@ -258,10 +311,10 @@ all:
 
             cluster.name: es_vcg
             discovery.seed_hosts:
-              - primary.dev.vcg.com
+              - gpu0.dev.yufei.com
 
             cluster.initial_master_nodes:
-              - primary.dev.vcg.com
+              - gpu0.dev.yufei.com
             ES_JAVA_OPTS: -Xms10g -Xmx10g
 
 
@@ -273,8 +326,8 @@ all:
       vars:
         as_hadoop_master: true
         as_hadoop_slave: true
-        as_resourcemanager_address: primary.dev.vcg.com
-        as_namenode_address: primary.dev.vcg.com
+        as_resourcemanager_address: gpu0.dev.yufei.com
+        as_namenode_address: gpu0.dev.yufei.com
 
     hadoop_slave:
       hosts:
@@ -292,7 +345,7 @@ all:
           as_spark_log_dir: /data3/spark/logs/
           as_spark_worker_dir: /data3/spark/works/
           as_spark_local_dirs: /data3/spark/data/
-          as_spark_master_host: primary.dev.vcg.com
+          as_spark_master_host: gpu0.dev.yufei.com
           as_docker_allowed_rw_mounts: /data3/yarn/data,/data3/yarn/logs
 
           app_rootDir: /data3/apps/
@@ -326,15 +379,15 @@ all:
       vars:
         as_hadoop_master: false
         as_hadoop_slave: true
-        as_resourcemanager_address: primary.dev.vcg.com
-        as_namenode_address: primary.dev.vcg.com
+        as_resourcemanager_address: gpu0.dev.yufei.com
+        as_namenode_address: gpu0.dev.yufei.com
 
     kafka_brokers:
       hosts:
         kafka.dev:
           ansible_port: 22
           ansible_host: 172.16.104.220
-          as_hostname: primary.dev.vcg.com
+          as_hostname: gpu0.dev.yufei.com
           app_rootDir: /data/apps/
           app_dataRootDir: /data/app_data/
           app_logRootDir: /data/app_logs/
