--- a/roles/mongo/templates/mongod.conf
+++ b/roles/mongo/templates/mongod.conf
@@ -1,11 +1,12 @@
-
+net:
+   port: 27018
+   bindIpAll: true
 systemLog:
    destination: file
    path: {{app_logRootDir}}{{appName}}/mongo.log
    logAppend: true
 storage:
   dbPath: {{app_dataRootDir}}{{appName}}/
-  indexBuildRetry: true
   journal:
     enabled: true
   directoryPerDB: true
@@ -13,6 +14,12 @@ storage:
   wiredTiger:
     engineConfig:
       cacheSizeGB: {{mongo_config['wiredTiger.engineConfig.cacheSizeGB']}}
+      journalCompressor: zstd
+      directoryForIndexes: true
+    collectionConfig:
+      blockCompressor: zstd
+    indexConfig:
+      prefixCompression: true
 
 security:
   authorization: enabled
