--- a/roles/mongo/vars/main.yml
+++ b/roles/mongo/vars/main.yml
@@ -1,20 +1,18 @@
 ---
 
-#should place within host vars
-#kafka_log_dirs: /data5/kafka-logs/
-#remote_kafka_dir: /data/apps/
-#kafka_home: "{{remote_kafka_dir}}{{kafka_version}}/"
 
 
 
+#mongodb-linux-x86_64-ubuntu2004-4.4.8
 
 
-app_version:  mongodb-linux-x86_64-3.2.4
+#app_version:  mongodb-linux-x86_64-3.2.4
+#appName: mongodb-linux-x86_64-3.2.4
+app_version: mongodb-linux-x86_64-ubuntu2004-4.4.8
 app_libary_path: /mnt/d/data/software/mongodb/{{app_version}}.tgz
+appName: mongodb-linux-x86_64-ubuntu2004-4.4.8
 
 
-
-appName: mongodb-linux-x86_64-3.2.4
 
 
 
