--- a/hosts.yml
+++ b/hosts.yml
@@ -118,6 +118,77 @@ all:
         as_hadoop_slave: true
         as_resourcemanager_address: gpu0.dev.yufei.com
         as_namenode_address: gpu0.dev.yufei.com
+    yto_es:
+      hosts:
+        yto_es_master1:
+          ansible_port: 22
+          ansible_host: 47.93.42.193
+          ip: 0.0.0.0
+          as_hostname: es1.dev.yto.com
+          domains:
+            - ip: 172.27.91.143
+              domain: es0.dev.yto.com
+            - ip: 172.27.91.144
+              domain: es1.dev.yto.com
+          app_rootDir: /data/apps/
+          app_dataRootDir: /data/app_data/
+          app_logRootDir: /data/app_logs/
+          app_confRootDir: /data/app_conf/
+          es_config:
+            node.roles:
+              - master
+            vm.max_map_count: 262144
+
+            cluster.name: yto_es
+            discovery.seed_hosts:
+              - 172.27.91.144
+              - 172.27.91.143
+
+            cluster.initial_master_nodes:
+              - 172.27.91.144
+              - 172.27.91.143
+            ES_JAVA_OPTS:
+          mongo_config:
+            wiredTiger.engineConfig.cacheSizeGB: 10
+          vars:
+
+        yto_es_slave1:
+          ansible_port: 22
+          ansible_host: 47.93.25.247
+          ip: 0.0.0.0
+          as_hostname: es0.dev.yto.com
+          domains:
+            - ip: 172.27.91.143
+              domain: es0.dev.yto.com
+            - ip: 172.27.91.144
+              domain: es1.dev.yto.com
+          app_rootDir: /data/apps/
+          app_dataRootDir: /data/app_data/
+          app_logRootDir: /data/app_logs/
+          app_confRootDir: /data/app_conf/
+          es_config:
+            node.roles:
+              - data
+              - master
+            vm.max_map_count: 262144
+
+            cluster.name: yto_es
+            discovery.seed_hosts:
+              - 172.27.91.144
+              - 172.27.91.143
+
+            cluster.initial_master_nodes:
+              - 172.27.91.144
+              - 172.27.91.143
+            ES_JAVA_OPTS:
+          mongo_config:
+            wiredTiger.engineConfig.cacheSizeGB: 10
+
+
+
+          vars:
+
+
 
 
 
@@ -138,10 +209,10 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-#          app_rootDir: /data/apps/
-#          app_dataRootDir: /data/app_data/
-#          app_logRootDir: /data/app_logs/
-#          app_confRootDir: /data/app_conf/
+          #          app_rootDir: /data/apps/
+          #          app_dataRootDir: /data/app_data/
+          #          app_logRootDir: /data/app_logs/
+          #          app_confRootDir: /data/app_conf/
 
           #kafka
           kafka_brokerId: 0
@@ -152,22 +223,22 @@ all:
               - master
             vm.max_map_count: 262144
 
-#            cluster.name: es_vb
-#            discovery.seed_hosts:
-#              - vb0.dev.yufei.com
-#              - vb1.dev.yufei.com
-##              - vb2.dev.yufei.com
-#
-#            cluster.initial_master_nodes:
-#              - vb0.dev.yufei.com
-#              - vb1.dev.yufei.com
-#              - vb2.dev.yufei.com
+            #            cluster.name: es_vb
+            #            discovery.seed_hosts:
+            #              - vb0.dev.yufei.com
+            #              - vb1.dev.yufei.com
+            ##              - vb2.dev.yufei.com
+            #
+            #            cluster.initial_master_nodes:
+            #              - vb0.dev.yufei.com
+            #              - vb1.dev.yufei.com
+            #              - vb2.dev.yufei.com
             ES_JAVA_OPTS:
 
           #mongo
           mongo_config:
             wiredTiger.engineConfig.cacheSizeGB: 1
-#            wiredTiger.inMemory.engineConfig.inMemorySizeGB: 1
+          #            wiredTiger.inMemory.engineConfig.inMemorySizeGB: 1
 
           ansible_python_interpreter: /data/apps/miniconda3/bin/python
 
@@ -215,14 +286,14 @@ all:
 
             cluster.name: es_vb
             discovery.seed_hosts:
-#              - vb0.dev.yufei.com
+              #              - vb0.dev.yufei.com
               - vb1.dev.yufei.com
-#              - vb2.dev.yufei.com
+            #              - vb2.dev.yufei.com
 
             cluster.initial_master_nodes:
-#              - vb0.dev.yufei.com
+              #              - vb0.dev.yufei.com
               - vb1.dev.yufei.com
-#              - vb2.dev.yufei.com
+            #              - vb2.dev.yufei.com
             ES_JAVA_OPTS:
         vb2:
           ansible_port: 22
@@ -238,10 +309,10 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-#          app_rootDir: /data/apps/
-#          app_dataRootDir: /data/app_data/
-#          app_logRootDir: /data/app_logs/
-#          app_confRootDir: /data/app_conf/
+          #          app_rootDir: /data/apps/
+          #          app_dataRootDir: /data/app_data/
+          #          app_logRootDir: /data/app_logs/
+          #          app_confRootDir: /data/app_conf/
 
           #kafka
           kafka_brokerId: 2
@@ -249,19 +320,19 @@ all:
           es_config:
             vm.max_map_count: 262144
 
-#            cluster.name: es_vb
-#            node.roles:
-#              - master
-#              - data
-#            discovery.seed_hosts:
-#              - vb0.dev.yufei.com
-#              - vb1.dev.yufei.com
-#              - vb2.dev.yufei.com
+            #            cluster.name: es_vb
+            #            node.roles:
+            #              - master
+            #              - data
+            #            discovery.seed_hosts:
+            #              - vb0.dev.yufei.com
+            #              - vb1.dev.yufei.com
+            #              - vb2.dev.yufei.com
 
-#            cluster.initial_master_nodes:
-#              - vb0.dev.yufei.com
-#              - vb1.dev.yufei.com
-#              - vb2.dev.yufei.com
+            #            cluster.initial_master_nodes:
+            #              - vb0.dev.yufei.com
+            #              - vb1.dev.yufei.com
+            #              - vb2.dev.yufei.com
             ES_JAVA_OPTS:
 
 
@@ -320,8 +391,8 @@ all:
 
 
 
-#            as_cpu-vcores: 16
-#            as_memory-mb: 60960
+      #            as_cpu-vcores: 16
+      #            as_memory-mb: 60960
 
       vars:
         as_hadoop_master: true
