--- a/roles/es/tasks/main.yml
+++ b/roles/es/tasks/main.yml
@@ -51,6 +51,17 @@
     owner: zhaoyufei
     group: hadoop
     mode: u=rwx,g=xr,o=x
+- name: deploy plugins
+  become: yes
+  become_user: root
+  tags: es_plugin_install
+  copy:
+    src: "{{es_plugins_dir}}"
+    dest: "{{app_rootDir}}{{appName}}/"
+    owner: zhaoyufei
+    group: hadoop
+    mode: u=rwx,g=xr,o=x
+
 - name: copy orginal config files to conf folder
   become: yes
   become_user: root
@@ -74,6 +85,7 @@
   tags: es_config
   with_items:
         - {src: 'elasticsearch.yml',dest: 'elasticsearch.yml'}
+        - {src: 'jvm.options',dest: 'jvm.options'}
 
 
 - name: app env setup
