support milvus role

--- a/hosts.yml
+++ b/hosts.yml
@@ -3,56 +3,79 @@ all:
   children:
     wsl:
       hosts:
-        local:
+        yufeiDevLocal:
           ansible_port: 22
-          ansible_host: 192.168.56.1
-          ip: 192.168.56.1
-          as_hostname: local
+#          ansible_host: 192.168.56.1
+#          ip: 192.168.56.1
+          ansible_host: 172.24.211.135
+          ip: 172.24.211.135
+
+
+
+          as_hostname: yufeiDevLocal
           domains:
-            - ip: 192.168.18.22
-              domain: vb1.dev.yufei.com
-            - ip: 192.168.18.23
-              domain: vb2.dev.yufei.com
-            - ip: 192.168.18.21
-              domain: vb0.dev.yufei.com
-            - ip: 192.168.18.18
-              domain: gpu0.dev.yufei.com
-
-          netplan_cfg: /etc/netplan/00-installer-config.yaml
-          interfaceName: enp4s0
-          as_gpu: true
-
-          as_docker_allowed_rw_mounts: /data5/yarn/data,/data5/yarn/logs
+#            - ip: 192.168.18.22
+#              domain: vb1.dev.yufei.com
+#            - ip: 192.168.18.23
+#              domain: vb2.dev.yufei.com
+#            - ip: 192.168.18.21
+#              domain: vb0.dev.yufei.com
+#            - ip: 192.168.18.18
+#              domain: gpu0.dev.yufei.com
 
 
-          as_redis_dbdir: /data1/redis/data/
-
-          as_hdfs_name_dir: file:///data1/hadoop/hdfs/namenode
-          as_hdfs_data_dir: file:///data1/hadoop/hdfs/datanode/
-          as_spark_log_dir: /mnt/e/data/spark/logs/
-          as_spark_worker_dir: /mnt/e/data/spark/works/
-          as_spark_local_dirs: /mnt/e/data/spark/data/
-          as_spark_master_host: gpu0.dev.yufei.com
-          as_local_dirs: /mnt/e/data/yarn/data
-          as_log_dirs: /mnt/e/data/yarn/logs
-          as_memory_mb: 80960
-          as_cpu_vcores: 200
 
 
-          app_rootDir: /mnt/e/data/apps/
-          app_dataRootDir: /data1/app_data/
-          app_logRootDir: /data1/app_logs/
-          app_confRootDir: /data1/app_conf/
+          app_rootDir: /mnt/d/data/apps/
+          app_dataRootDir: /mnt/d/data/app_data/
+          app_logRootDir: /mnt/d/app_logs/
+          app_confRootDir: /mnt/d/app_conf/
 
 
 
 
         vars:
-          as_hadoop_master: true
-          as_hadoop_slave: true
-          as_resourcemanager_address: lcoal.dev.yufei.com
-          as_namenode_address: lcoal.dev.yufei.com
 
+    guazi_milvus:
+      hosts:
+        guazi_milvus_0:
+          ansible_port: 22
+          ansible_host: 10.16.210.147
+          ip: 0.0.0.0
+          as_hostname: m0.dev.guazi.com
+
+          domains:
+            - ip: 10.16.210.147
+              domain: m0.dev.guazi.com
+            - ip: 10.16.210.148
+              domain: m1.dev.guazi.com
+
+
+          vars:
+
+        guazi_milvus_1:
+          ansible_port: 22
+          ansible_host: 10.16.210.148
+          ip: 0.0.0.0
+          as_hostname: m1.dev.guazi.com
+          domains:
+            - ip: 10.16.210.147
+              domain: m0.dev.guazi.com
+            - ip: 10.16.210.148
+              domain: m1.dev.guazi.com
+
+
+
+
+
+          vars:
+      vars:
+        op_user: comm
+        op_user_group: comm
+        app_rootDir: /data0/apps/
+        app_dataRootDir: /data0/app_data/
+        app_logRootDir: /data0/app_logs/
+        app_confRootDir: /data0/app_conf/
     home_master:
       hosts:
         gpu0:
