--- a/roles/conda/tasks/main.yml
+++ b/roles/conda/tasks/main.yml
@@ -22,8 +22,8 @@
   tags: conda_install
   file:
     path: "{{item}}"
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
     mode: u=rwx,g=xr,o=x
     recurse: yes
     state: directory
@@ -74,8 +74,8 @@
     dest: "{{app_rootDir}}{{appName}}/envs/{{envName}}/"
     src: templates/{{pip_requirements_name}}.txt
     mode: u=rw,g=r,o=r
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
   become: yes
   become_user: root
   tags: pip_packages_install
